--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,3 @@
-<h1>Portfolio Items</h1>
-<a href="portfolios/new">Create new item</a>
 <%= link_to "Create new item", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_item| %>
@@ -8,4 +6,5 @@
   <p><%= portfolio_item.body %></p>
   <p><%=image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %></p>
   <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+  <%= link_to 'Delete Record', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
