--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Show</h1>
 
-<%= image_tag @portfolio_item.main_image %>
+<%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
 <h1><%= @portfolio_item.title %></h1>
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body %></p>
