Added Collection Based Partials

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,4 @@
 <%= link_to "Create new item", new_portfolio_path %>
 
-<% render @portfolio_items %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items %>
   
