--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DevcampTest</title>
+    <title><%= @page_title%></title>
     <%= csrf_meta_tags %>
 
+  <META name= "keywords" content="location, based, messaging, social, network, nearby,
+  friends, community, neighborhood, local, events"/>
+
+  
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
