--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,3 +1,67 @@
-// Place all the styles related to the Portfolios controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ */
+ 
+body{
+ 	color:black;
+ 	background-color:lightgray;
+	}
+ 
+ 
+.Nav{
+  
+		background:linear-gradient(to left, #00FFFF,#00FFFF);
+		text-align:center;
+		padding:0px;
+		margin-top:-14px;
+		margin-left:-10px;
+		margin-right:-10px;
+		background-repeat:no-repeat;
+	}
+.Item1:hover{
+		
+		font-size:18px;
+		color:gray;
+		text-decoration:underline;
+		
+	}
+.Item2:hover{
+		
+		font-size:18px;
+		color:gray;
+		text-decoration:underline;
+		
+	}
+.Item3:hover{
+		
+		font-size:18px;
+		color:gray;
+		text-decoration:underline;
+		
+	}
+.Item4:hover{
+		
+		font-size:18px;
+		color:gray;
+		text-decoration:underline;
+		
+	}
+.Item5:hover{
+		
+		font-size:18px;
+		color:gray;
+		text-decoration:underline;
+		
+	}
