--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -12,12 +12,17 @@
   </head>
 
   <body>
+    
     <link rel="stylesheet" type="text/css" href="css/css.scss">
     
+    
+    <%=render "shared/nav"%>
+    
+   <!-- 
     <div class="Nav">
     <nav>
       <div class="Item1">
-      <div><%= link_to "Home", root_path%></div>
+      <div><%= link_to "Home", root_path%></div>    
       </div>
       <div class="Item2">
       <div><%= link_to "About", about_me_path%></div>
@@ -33,6 +38,8 @@
       </div>
     </nav>
     </div>
+    -->
+    
     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
