--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,25 +14,8 @@
   <body>
     
      <link rel="stylesheet" type="text/css" href="css/css.scss">
-        <div class="Nav">
-    <nav>
-      <div class="Item1">
-      <div><%= link_to "Home", root_path%></div>
-      </div>
-      <div class="Item2">
-      <div><%= link_to "About", about_me_path%></div>
-      </div>
-      <div class="Item3">
-      <div><%= link_to "Contact", contact_path%></div>
-      </div>
-      <div class="Item4">
-      <div><%= link_to "Blog", blogs_path%></div>
-      </div>
-      <div class="Item5">
-      <div><%= link_to "Portfolio", portfolios_path%></div>
-      </div>
-    </nav>
-    </div>
+     
+        <%= render "shared/nav" %>
     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
