--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
     
     <%= yield %>
     
-    <% if session[:source] %>
-      <p> Thanks for visiting me from <%= session[:source] %> </p>
-    <% end %>
+    <%source_helper("application")%>
+    
   </body>
 </html>
