--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,5 +1,5 @@
 <div>
-        <p><%= blog.title %></p>
+        <p><%= blog.title.upcase %></p>
         <p><%= blog.body %></p>
         <p><%= link_to blog.status, toggle_status_blog_path(blog) %></p>
         <p><%= link_to 'Show', blog %></p>
