--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p><%= number_to_phone "5555555555" %></p>
+
+<p><%= number_to_currency "15034" %></p>
+
+<p><%= number_with_delimiter  "150809402392304" %></p>
