--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,10 @@
     
     <%= yield %>
     
-    <%= @copyright %>
+    <p></p>
+    
+    <%= copyright_generator %>
+    
     <%source_helper("application")%>
     
   </body>
