--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -4,9 +4,9 @@
         <td>Published <%= distance_of_time_in_words(blog.created_at, Time.now)%> ago</td>
         <td><%= blog.title.upcase %></td>
         <td><%= blog.body %></td>
-        <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
+        <td><%= link_to blog.status, toggle_status_blog_path(blog) if logged_in?(:admin,:customer,:etc) %></td>
         <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:admin,:customer,:etc) %></td>
+        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:admin,:customer,:etc) %></td>
       </div>
 </tr>
