--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,16 @@
   </head>
 
   <body>
+    
+        <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
         <link rel="stylesheet" type="text/css" href="css/css.scss">
     
-    <%=render "shared/nav" %>
-    
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    
-
+    <%=render "shared/application_nav" %>
     
     <%=login_helper%>
     
@@ -37,3 +39,8 @@
     
   </body>
 </html>
+        </div>
+
+      </div>
+
+    </div>
