--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,22 +1,21 @@
-        <link rel="stylesheet" type="text/css" href="css/css.scss">
-    
-    <div class="Nav">
-    <nav>
-      <div class="Item1">
-      <div><%= link_to "Home", root_path%></div>
-      </div>
-      <div class="Item2">
-      <div><%= link_to "About", about_me_path%></div>
-      </div>
-      <div class="Item3">
-      <div><%= link_to "Contact", contact_path%></div>
-      </div>
-      <div class="Item4">
-      <div><%= link_to "Blog", blogs_path%></div>
-      </div>
-      <div class="Item5">
-      <div><%= link_to "Portfolio", portfolios_path%></div>
-      </div>
-      
-    </nav>
+<link rel="stylesheet" type="text/css" href="css/css.scss">
+
+<div class="Nav">
+  <nav>
+    <div class="Item1">
+    <%= link_to "Home", root_path%>
     </div>
+    <div class="Item2">
+    <%= link_to "About", about_me_path%>
+    </div>
+    <div class="Item3">
+    <%= link_to "Contact", contact_path%>
+    </div>
+    <div class="Item4">
+    <%= link_to "Blog", blogs_path%>
+    </div>
+    <div class="Item5">
+    <%= link_to "Portfolio", portfolios_path%>
+    </div>
+  </nav>
+</div>
