--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,9 @@
     
     <%=render "shared/application_nav" %>
     
-    <%=login_helper%>
-    
     <%= yield %>
-    
-    <p></p>
-    
-    <%= copyright_generator %>
+
+    <%=render "shared/application_footer" %>
     
     <%source_helper("application")%>
     
