--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>Information about me</h1>
+<p>Info about me</p>
+<hr>
+<h1>Achievements</h1>
+<p>My Achievements</p>
+<hr>
+<h1>My Story</h1>
+<p>My challenges in life and my life story</p>
+
+
+
