--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,7 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
+<h1>Contact</h1>
+<p>Moblie Contact<%= number_to_phone "1(801)-819-4875" %></p>
 
-<p><%= number_to_currency "15034" %></p>
+<p>My Gmail: brandonjyates0216@gmail.com</p>
 
-<p><%= number_with_delimiter  "150809402392304" %></p>
+<div class='map'>
+</div>
