--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -232,3 +232,23 @@ body {
     width: 55rem;
   }
 }
+/*
+ Custom Styles
+*/
+
+
+.card-block{
+  color:black;
+}
+
+.Edit{
+}
+
+.Cancel{
+  
+}
+
+.Back{
+  color:black;
+  text-align:center;
+}
