--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -239,6 +239,7 @@ body {
 
 .card-block{
   color:black;
+  text-align:lefts;
 }
 
 .Edit{
@@ -248,7 +249,7 @@ body {
   
 }
 
-.Back{
+.auth-links a{
   color:black;
   text-align:center;
 }
