--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -52,13 +52,13 @@
 <div class="col-md-4">
 <div class="Cancel">
 <h3>Cancel my account</h3>
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:'btn btn-danger' %></p>
 </div>
 </div>
 
-
-    <div class="Back">
-    <%= link_to "Back", :back %>
-    </div>
+    <div>
+      <div class="auth-links">
+        <%= link_to "Back", :back %>
+      </div>
   </div>
 </div>
