--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,21 +1,10 @@
 <link rel="stylesheet" type="text/css" href="css/css.scss">
 
 <div class="Nav">
-  <nav>
-    <div class="Item1">
     <%= link_to "Home", root_path%>
-    </div>
-    <div class="Item2">
     <%= link_to "About", about_me_path%>
-    </div>
-    <div class="Item3">
     <%= link_to "Contact", contact_path%>
-    </div>
-    <div class="Item4">
     <%= link_to "Blog", blogs_path%>
-    </div>
-    <div class="Item5">
     <%= link_to "Portfolio", portfolios_path%>
-    </div>
-  </nav>
+    <%=login_helper%>
 </div>
