--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -18,19 +18,7 @@
     
      <link rel="stylesheet" type="text/css" href="css/css.scss">
      
-
-    <!--start of nav-->
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
+    <%= render 'shared/blog_nav' %>
     
     <!--start of blog header-->
         <div class="blog-header">
@@ -44,7 +32,6 @@
     </div>
       <div class="row">
       
-    <%=login_helper%>
     
     <%= yield %>
       
