--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -21,15 +21,16 @@
     <%= render 'shared/blog_nav' %>
     
     <!--start of blog header-->
-        <div class="blog-header">
+    <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
 
     <div class="container">
-    </div>
+    
       <div class="row">
       
     
@@ -66,6 +67,7 @@
             </ol>
           </div>
         </div><!-- /.blog-sidebar -->
+        </div>
         
         
         <footer class="blog-footer">
@@ -74,14 +76,12 @@
             <a href="#">Back to top</a>
           </p>
         </footer>
-        
-    <%= render "shared/nav" %>    
-    <p></p>
     
     <%= copyright_generator %>
     
-    <%source_helper("blog")%>
+    <% source_helper("blog") %>
+    
       </div>
-    </div>
+  
   </body>
 </html>
