--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title><%= @page_title%></title>
+    
+    
     <%= csrf_meta_tags %>
 
   <meta name= "keywords" content="<%=@seo_keywords%>"/>
@@ -13,10 +19,8 @@
 
   <body>
     
-    <link rel="stylesheet" type="text/css" href="css/css.scss">
-    
-    
-    <%=render "shared/nav"%>
+    <%=render 'shared/portfolio_nav'%>
+    <%=render 'shared/portfolio_masthead'%>
     
    <!-- 
     <div class="Nav">
@@ -45,16 +49,11 @@
     <p class="alert"><%= alert %></p>
     
     
-
-    
-    
-    <%=login_helper%>
     
     <%= yield %>
     
-    <p></p>
-    
-    <%= copyright_generator %>
+      
+    <%= render 'shared/portfolio_footer' %>
 
     <%source_helper("application")%>
     
