--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -13,14 +13,14 @@
   <meta name= "keywords" content="<%=@seo_keywords%>"/>
 
   
-    <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     
-    <%=render 'shared/portfolio_nav'%>
-    <%=render 'shared/portfolio_masthead'%>
+    <%= render 'shared/portfolio_nav'%>
+    <%= render 'shared/portfolio_masthead' if (current_page?(controller:"portfolios") && current_page?(action:"index")) %>
     
    <!-- 
     <div class="Nav">
