--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import "jquery-ui";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -66,6 +68,7 @@ body{
 		
 	}
  */
+ 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
 }
@@ -125,6 +128,8 @@ footer p {
   margin-bottom: .25rem;
 }
 
-.portfolio-form {
-  padding: 20px;
+/* Custom styles */
+
+.portfolio-container {
+  padding-top: 30px;
 }
