--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,16 @@
-<h1>Information about me</h1>
-<p>Info about me</p>
-<hr>
-<h1>Achievements</h1>
-<p>My Achievements</p>
-<hr>
-<h1>My Story</h1>
-<p>My challenges in life and my life story</p>
-
-
-
+<div class="row">
+  <div class="col-md-4">
+    <!--<img src ="Image Link" width="100" alt= "Profile Image">-->
+  </div>
+  <div class="col-md-8">
+    <hr>
+    <h1>Information about me</h1>
+    <p>Info about me</p>
+    <hr>
+    <h1>Achievements</h1>
+    <p>My Achievements</p>
+    <hr>
+    <h1>My Story</h1>
+    <p>My challenges in life and my life story</p>
+  </div>
+</div>
