--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
 
         <link rel="stylesheet" type="text/css" href="css/css.scss">
     
+    <div id="background"></div>
+    
+    
     <%=render "shared/application_nav" %>
     
     <%= yield %>
