--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -12,13 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form_control' %>
+    <%= f.text_field :title, class: 'form_control', placeholder: "Title" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :body %>
-    <%= f.text_area :body, class: 'form_control', rows:15%>
+    <%= f.text_area :body, class: 'form_control', rows:15, placeholder: "Content"%>
   </div>
 
   <div class="form-group">
