--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,6 +1,6 @@
 @import "bootstrap";
 @import "jquery-ui";
-
+@import "gritter";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
