--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_for(@portfolio_item) do |f| %>
+  <% if @portfolio_item.errors.any? %>
+    <% @portfolio_item.errors.full_messages.each do |error| %>
+      <%= js add_gritter(error, title: "Jordan Hudgens Portfolio", sticky: false) %>
+    <% end %>
+  <% end %>
+  
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
@@ -47,12 +53,16 @@
     <h2>Technolgies Used:</h2>
     <div>
       <%= f.fields_for :technologies do |technology_form| %>
-        <div class="form-group">
-          <%= technology_form.label :name %>
-          <%= technology_form.text_field :name, class: 'form-control' %>
-        </div>
-      <% end %>
+      <%= render 'technology_fields', f: technology_form %>
+    <% end %>
+    
+    
+      <div>
+        <%= link_to_add_association 'Add Technology', f, :technologies %>
+      </div>
     </div>
+    
+    
 
     <div class="form-group">
       <%= f.submit 'Save Portfolio Item', class: 'btn btn-primary btn-block' %>
