--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -289,3 +289,18 @@ body {
   margin-left: 15px;
   margin-right: 15px;
 }
+
+.news {
+  color: black;
+  margin: 20px;
+}
+ 
+.news > .card {
+  padding: 30px;
+}
+ 
+
+
+.news a {
+  color: #00FFFF;
+}
