--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -35,6 +35,8 @@
         
     <%= render 'shared/blog_footer' %>
     
+    <%= alerts %>
+    
     <%= copyright_generator %>
     
     <% source_helper("blog") %>
