--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -40,6 +40,16 @@ h6, .h6 {
 /*
  * Masthead for nav
  */
+.body{
+  
+}
+.blog-title{
+  color:black;
+}
+
+p.lead.blog-description{
+  color:darkgray;
+}
 
 .blog-masthead {
   margin-bottom: 3rem;
@@ -85,6 +95,7 @@ h6, .h6 {
  */
 
 .blog-header {
+  background:linear-gradient(to left, #00FFFF,#00FFFF);
   padding-bottom: 1.25rem;
   margin-bottom: 2rem;
   border-bottom: .05rem solid #eee;
@@ -145,6 +156,7 @@ h6, .h6 {
 }
 .blog-post-title {
   margin-bottom: .25rem;
+  color:black;
   font-size: 2.5rem;
 }
 .blog-post-meta {
@@ -173,4 +185,17 @@ h6, .h6 {
 .social-links li{
   font-size:1.5em;
   
+}
+
+.comment-card > .card {
+  margin-top: 15px;
+}
+
+.comment-attribution {
+  font-size: .8em;
+  font-style: italic;
+}
+
+.comment-name {
+  font-weight: 700;
 }
