--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,10 +1,9 @@
 <div class="portfolio-container">
   <div class="row">
-    <div class="col-sm-7">
-      <%= image_tag @portfolio_item.main_image, width: '100%' unless @portfolio_item.main_image.nil? %>    </div>
-    </div>
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image, width: '350px', height: '350px' unless @portfolio_item.main_image.nil? %>    </div>
     
-    <div class="col-sm-5">
+        <div class="col-md-5">
       
       <h1><%= @portfolio_item.title %></h1>
       
@@ -21,12 +20,12 @@
       <% end %>
       
       <% if logged_in?(:site_admin) %>
-        <div class="col-sm-12">
-          <%= link_to "Edit Item" edit_portfolio_path(@porfolio_item), class: 'btn bth-warning' %>
+        <div class="col-md-12">
+          <%= link_to "Edit Item", edit_portfolio_path(@portfolio_item), class: 'btn btn-warning' %>
         </div>
       <% end %>
     </div>
-  </div>
+    </div>
 </div>
 
 
