--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -84,6 +84,7 @@ div.col-md-7{
 	margin-bottom: 20px;
 }
 div.col-md-5{
+	font-family: "Comic Sans MS", cursive, sans-serif;
 	text-align:center;
 }
 a.btn.btn-warning{
