--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,12 +1,30 @@
-<div class="blog-masthead">
+<div class="collapse bg-inverse" id="navbarHeader">
   <div class="container">
-    <nav class="nav blog-nav">
-      <%= link_to "Home", root_path, class: 'nav-link'%>
-      <%= link_to "About", about_me_path, class: 'nav-link'%>
-      <%= link_to "Contact", contact_path, class: 'nav-link'%>
-      <%= link_to "Blog", blogs_path, class: 'nav-link'%>
-      <%= link_to "Portfolio", portfolios_path, class: 'nav-link'%>
-      <%= login_helper 'nav-link' %>
-    </nav>
+    <div class="row">
+      <div class="col-sm-8 py-4">
+        <h4 class="text-white">About</h4>
+        <p class="text-muted">My blogs are posted below.</p>
+      </div>
+      <div class="col-sm-4 py-4">
+        <h4 class="text-white">Explore</h4>
+        <ul class="list-unstyled">
+          <li><%=link_to "Home", root_path, class: 'text-white'%></li>
+          <li><%= link_to "About", about_me_path, class: 'text-white'%></li>
+          <li><%= link_to "Contact", contact_path, class: 'text-white'%></li>
+          <li><%= link_to "Blog", blogs_path, class: 'text-white'%></li>
+          <li><%= link_to "Portfolio", portfolios_path, class: 'text-white'%></li>
+          <li><%= login_helper 'text-white' %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="navbar navbar-inverse bg-inverse">
+  <div class="container d-flex justify-content-between">
+    <a href="#" class="navbar-brand">Brandon Yates</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
 </div>
