--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,4 +4,5 @@
 <p>My Gmail: brandonjyates0216@gmail.com</p>
 
 <div class='map'>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.021708674693!2d-111.92298699999999!3d40.364042999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d7eec0669ae95%3A0x8a1eb7f20793e5e9!2sWestlake+High+School!5e0!3m2!1sen!2sus!4v1502204478677" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
